<resources>
    <string name="app_name">FoodApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_fields">Please fill all the fields!</string>
    <string name="welcome">Welcome!</string>
    <string name="account_created">Account created successfully!</string>
    <string name="log_out">log out</string>
    <string name="log_out_question">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logged_out_successfully">You logged out successfully!</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="add_to_fav">add to fav</string>
</resources>